# FixClient

./: .gitignore  Bundle64.wxs  Bundle86.wxs  CHANGELOG.md  Directory.Build.props  Fix.sln  Fix.vsmdi  FixClientx64.wixproj  FixClientx86.wixproj  LICENSE  Local.testsettings  Product64.wxs  Product86.wxs  README.md  Setup64.wixproj  Setup86.wixproj  TraceAndTestImpact.testsettings  setup.cfg
Dictionary/: AddedAttribute.cs  ApplVerIdTypeConverter.cs  BeginStringTypeConverter.cs  Dictionary.DataType.cs  Dictionary.Field.cs  Dictionary.FieldDefinition.cs  Dictionary.Message.cs  Dictionary.MessageFieldCollection.cs  Dictionary.Version.cs  Dictionary.VersionFieldCollection.cs  Dictionary.csproj  GlobalSuppressions.cs  IOrderedDictionary.cs  JavaScriptConverter.cs  Message.cs  OrderedDictionary.cs
DictionaryPerformanceTest/: DictionaryPerformanceTest.csproj  Program.cs
DictionaryTests/: DictionaryTests.csproj  EnumTests.cs  FieldTests.cs  MessageTests.cs  VersionTests.cs
Fix.Common/: DirtyTimer.cs  Fix.Common.csproj  IOrderedDictionary.cs  OrderedDictionary.cs  Report.cs
Fix.Common.Tests/: Fix.Common.Tests.csproj  ReportTests.cs
Fix.Dictionary/: ApplVerIdTypeConverter.cs  BeginStringTypeConverter.cs  DataType.cs  FieldValue.cs  Fix.Dictionary.csproj  Message.cs  MessageField.cs  MessageFieldCollection.cs  Pedigree.cs  README.md  Version.cs  VersionCollection.cs  VersionDataTypeCollection.cs  VersionField.cs  VersionFieldCollection.cs  Versions.cs  (+1 more)
Fix.Dictionary.Tests/: DataTypeTests.cs  FieldTests.cs  Fix.Dictionary.Tests.csproj  MessageTests.cs  VersionTests.cs
(+434 files in other folders)
