[metadata]
name = fixorchestra
version = 0.0.2
author = Gary Hughes
author_email = garyedwardhughes@gmail.com
description = Explore, manipulate, compare, and convert fixtrading.org orchestrations and repositories. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaryHughes/fixorchestra
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    fixorchestration = fixorchestra.orchestration:main
    fixaudit = fixaudit.fixaudit:main
    fixreptorc = fixreptorc.fixreptorc:main
    fixrepository = fixrepository.repository:main
